# omniedge-python

./: pyproject.toml
docs/: cli-dev-guide.md  tool-adapter-dev-guide.md
omniedge/: cli.py  terminal.py
omniedge/tools/: base.py  claude_code.py
