[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniedge"
version = "0.2.5"
description = "The official Python library for the OmniEdge API"
readme = "README.md"
requires-python = ">=3.9.2"
license = {text = "MIT"}
authors = [
    {name = "edgefn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/edgefn/omniedge-python"
Repository = "https://github.com/edgefn/omniedge-python"
Issues = "https://github.com/edgefn/omniedge-python/issues"

[project.scripts]
omniedge = "omniedge.cli:main"

[tool.setuptools]
packages = ["omniedge", "omniedge.tools"]
